src/test/deca/context/valid/objet/instanceof_cont_03.deca
// Description:
//   Instanceof condition
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {

}

{
    A a;
    if(a instanceof A) {

    }
}
